// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with expenses correctly 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling 
    $1,240.55
  </p>
</div>
`;

exports[`should render ExpensesSummary with no expenses correctly 1`] = `
<div>
  <p>
    Viewing 
    0
     expenses totalling 
    $0.00
  </p>
</div>
`;
